--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,11 @@ idna==3.11
 importlib-resources==5.0.7
 invoke==2.2.1
 Jinja2==3.1.6
+lxml==6.0.2
 markdown-it-py==3.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
+ncclient==0.7.0
 netmiko==4.6.0
 ntc_templates==8.1.0
 packaging==25.0
@@ -33,3 +35,4 @@ scp==0.15.0
 textfsm==2.1.0
 typing_extensions==4.15.0
 urllib3==1.26.20
+xmltodict==1.0.2
